2nd chng to my site

--- a/site2/index.html
+++ b/site2/index.html
@@ -4,7 +4,7 @@
 	<title>"hellow world"</title>
 </head>
 <body>
-	<h1>"hellow world"</h1>
+	<h1>"hellow world"my name is subhadip dey</h1>
 
 </body>
 </html>
