3 rd chng and html revision

--- a/site2/index.html
+++ b/site2/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>"hellow world"</title>
+	<title>"HTML5 revision"</title>
 </head>
 <body>
-	<h1>"hellow world"my name is subhadip dey</h1>
+	<header>here all the initial information about the page is given.</header>
+	<h1>HTML5 and git rivision </h1>
+	<h2>this line should be a little smaller</h2>
+	<h7>this line should be more shorter </h7>
+	<p>in this paragraph all the content of the pafe should be written</p>
+	<section>
+		section 1::
+		<article>..articles are the part of a section..</article>
+		<article>...articles are special</article>
+	</section>
+    <section>
+    	<p>
+    		&quote; my name is subhadip dey and  i love codeing &quote;
+    		<article>risks in life should not be &il;thn 100% &amp; sadness in life note &gt;thn 100 </article> 
+    	</p>
+    </section>
+    <section>
+    	a list should be in this section for my home products.
+         <ul>
+         	<li>onion</li>
+         	<li>potato</li>
+         	<li>vegies
+         	     <ol>
+         	     	<li>cucumber</li>
+         	     	<li>water mellon</li>
+         	     </ol>
+         	 </li>
+         	 <li>rice</li>
 
+         </ul>
+       <aside>ths portion is useless i think</aside>
+    </section>
+    <footer> the copy right &copy; true as fuck </footer>
 </body>
 </html>
