--- a/site2/index.html
+++ b/site2/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<header>here all the initial information about the page is given.</header>
-	<h1>HTML5 and git rivision </h1>
+	<h1>&nbsp;HTML5 and git rivision </h1>
 	<h2>this line should be a little smaller</h2>
 	<h7>this line should be more shorter </h7>
 	<p>in this paragraph all the content of the pafe should be written</p>
@@ -16,8 +16,8 @@
 	</section>
     <section>
     	<p>
-    		&quote; my name is subhadip dey and  i love codeing &quote;
-    		<article>risks in life should not be &il;thn 100% &amp; sadness in life note &gt;thn 100 </article> 
+    		&quot; my name is subhadip dey and  i love codeing &quot;
+    		<article>risks in life should not be &lt;thn 100% &amp; sadness in life note &gt;thn 100 </article> 
     	</p>
     </section>
     <section>
@@ -36,6 +36,6 @@
          </ul>
        <aside>ths portion is useless i think</aside>
     </section>
-    <footer> the copy right &copy; true as fuck </footer>
+    <footer> the copy rightttt &copy; true as fuck </footer>
 </body>
 </html>
